--- a/index.html
+++ b/index.html
@@ -752,17 +752,17 @@
           <ul class="project-list">
 
             <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="#">
+              <a href="https://drive.google.com/file/d/1CLM92RxkjtjUfHfEkaFHyIWrzAPElcTR/view">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-1.jpg" alt="finance" loading="lazy">
+                  <img src="./assets/images/project-1.png" alt="finance" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Finance</h3>
+                <h3 class="project-title">Blog Website</h3>
 
                 <p class="project-category">Web development</p>
 
@@ -770,7 +770,7 @@
             </li>
 
             <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="#">
+              <a href="https://drive.google.com/file/d/1N4f4uBSLgISJDb77ZhWMexxxwKSTDNMe/view">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -780,7 +780,7 @@
                   <img src="./assets/images/project-2.png" alt="orizon" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Orizon</h3>
+                <h3 class="project-title">Basic Banking System</h3>
 
                 <p class="project-category">Web development</p>
 
@@ -788,17 +788,17 @@
             </li>
 
             <li class="project-item  active" data-filter-item data-category="web design">
-              <a href="#">
+              <a href="https://uxfol.io/p/himaja.kakade/038ba055">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-3.jpg" alt="fundo" loading="lazy">
+                  <img src="./assets/images/project-3.png" alt="fundo" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Fundo</h3>
+                <h3 class="project-title">UI/UX Designs</h3>
 
                 <p class="project-category">Web design</p>
 
@@ -806,7 +806,7 @@
             </li>
 
             <li class="project-item  active" data-filter-item data-category="applications">
-              <a href="#">
+              <a href="https://drive.google.com/file/d/1N4f4uBSLgISJDb77ZhWMexxxwKSTDNMe/view">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -816,7 +816,7 @@
                   <img src="./assets/images/project-4.png" alt="brawlhalla" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Brawlhalla</h3>
+                <h3 class="project-title">Smart Park App</h3>
 
                 <p class="project-category">Applications</p>
 
@@ -834,7 +834,7 @@
                   <img src="./assets/images/project-5.png" alt="dsm." loading="lazy">
                 </figure>
 
-                <h3 class="project-title">DSM.</h3>
+                <h3 class="project-title">More Portfolio Designs</h3>
 
                 <p class="project-category">Web design</p>
 
@@ -842,7 +842,7 @@
             </li>
 
             <li class="project-item  active" data-filter-item data-category="web design">
-              <a href="#">
+              <a href="https://www.figma.com/design/ls97kgG3YxsLx7UvfyW7xN/Personas-%26-Prototypes">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -852,7 +852,7 @@
                   <img src="./assets/images/project-6.png" alt="metaspark" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">MetaSpark</h3>
+                <h3 class="project-title">Food & Coffee Application: Fieldwork of Design</h3>
 
                 <p class="project-category">Web design</p>
 
@@ -860,7 +860,7 @@
             </li>
 
             <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="#">
+              <a href="https://www.figma.com/proto/wppLyVtOXpqCN2MCv252zQ/SWEN90017-%3A-High-Fidelity-Prototype?type=design&node-id=812-2&t=jrse22pfWXKSwP4D-1&scaling=min-zoom&page-id=0%3A1&starting-point-node-id=812%3A2">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -870,7 +870,7 @@
                   <img src="./assets/images/project-7.png" alt="summary" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Summary</h3>
+                <h3 class="project-title">Database Management System</h3>
 
                 <p class="project-category">Web development</p>
 
@@ -878,24 +878,24 @@
             </li>
 
             <li class="project-item  active" data-filter-item data-category="applications">
-              <a href="#">
+              <a href="https://www.linkedin.com/in/himaja-k-617897188/details/projects/">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-8.jpg" alt="task manager" loading="lazy">
+                  <img src="./assets/images/project-8.png" alt="task manager" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Task Manager</h3>
+                <h3 class="project-title">Music Events System</h3>
 
                 <p class="project-category">Applications</p>
 
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="web development">
+            <!-- <li class="project-item  active" data-filter-item data-category="web development">
               <a href="#">
 
                 <figure class="project-img">
@@ -911,7 +911,7 @@
                 <p class="project-category">Web development</p>
 
               </a>
-            </li>
+            </li> -->
 
           </ul>
 
