--- a/index.html
+++ b/index.html
@@ -759,7 +759,7 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-1.png" alt="finance" loading="lazy">
+                  <img src="./assets/images/project-1.png" alt="blog" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Blog Website</h3>
@@ -795,7 +795,7 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-3.png" alt="fundo" loading="lazy">
+                  <img src="./assets/images/project-3.png" alt="UI-UX" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">UI/UX Designs</h3>
@@ -813,7 +813,7 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-4.png" alt="brawlhalla" loading="lazy">
+                  <img src="./assets/images/project-4.png" alt="Smart park" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Smart Park App</h3>
@@ -831,7 +831,7 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-5.png" alt="dsm." loading="lazy">
+                  <img src="./assets/images/project-5.png" alt="design" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">More Portfolio Designs</h3>
@@ -849,7 +849,7 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-6.png" alt="metaspark" loading="lazy">
+                  <img src="./assets/images/project-6.png" alt="Food App" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Food & Coffee Application: Fieldwork of Design</h3>
@@ -867,7 +867,7 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-7.png" alt="summary" loading="lazy">
+                  <img src="./assets/images/project-7.png" alt="August Robotics" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Database Management System</h3>
@@ -885,7 +885,7 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-8.png" alt="task manager" loading="lazy">
+                  <img src="./assets/images/project-8.png" alt="MES" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Music Events System</h3>
