--- a/index.html
+++ b/index.html
@@ -770,7 +770,7 @@
             </li>
 
             <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="https://drive.google.com/file/d/1N4f4uBSLgISJDb77ZhWMexxxwKSTDNMe/view">
+              <a href="https://drive.google.com/file/d/1A_oG9-FMqaH7AN5RdVpQn94y6incWvSD/view?usp=drive_link">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -824,7 +824,7 @@
             </li>
 
             <li class="project-item  active" data-filter-item data-category="web design">
-              <a href="#">
+              <a href="https://drive.google.com/file/d/1vcA1ULQx74lEiBu8o2YftnhR9U_ZXP7R/view?usp=drive_link">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
