--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
                 <h4 class="h4 service-item-title">Development</h4>
 
                 <p class="service-item-text">
-                  Using Java to Leetcode algorithms and data structures, Learning Docker and Linux, TDD using JavaScript.
+                  Using Java/Python to Leetcode algorithms and data structures, Grokking System Design, Learning Docker and Linux, TDD using JavaScript, Webapp development.
                 </p>
               </div>
 
