New resume changea

--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
                 <h4 class="h4 service-item-title">Development</h4>
 
                 <p class="service-item-text">
-                  Using Java to Leetcode algorithms and data structures, Learning Docker and Linux, TDD using JavaScript.
+                  Using Python to Leetcode algorithms and data structures, Learning Docker and Linux, TDD using JavaScript.
                 </p>
               </div>
 
@@ -576,10 +576,11 @@
               <span>Nov 2022 - Feb 2023</span>
 
               <p class="timeline-text">
-                • Used ReactJS and Django framework to create new website pages and API’s in an efficient way. <br>
-                • Documented all development work in application manual for future reference of new/current employees. <br>
-                • Followed Agile Methodology processes for development and effective communication with scrum master and other
-                  developers through Microsoft Teams, Slack channels and Zoom.
+                • Developed and optimized React.js components for an interactive web platform. <br>
+                • Built RESTful APIs using Django, improving data retrieval efficiency. <br>
+                • Documented key workflows in an application manual for knowledge transfer. <br>
+                • Worked in an Agile team, collaborating with developers and a Scrum Master to deliver high-quality features. <br>
+                • Use of Microsoft Teams, Slack channels and Zoom for communication.
               </p>
 
             </li>
@@ -591,9 +592,12 @@
               <span>Sept 2021 - Dec 2021</span>
 
               <p class="timeline-text">
-                • Project Management and System analysis- Managed 2 small scale application projects with Agile and used JIRA as a project management tool for tracking project progress and task allocation. <br>
-                • Conducted User Acceptance Testing (UAT) for Grandiose Supermarkets’ iOS/Android apps and website, identifying and reporting potential bugs. <br>
-                • Utilized Magento, LogiNext, and Dynamics NAV to test and ensure the seamless operation of e-commerce functionalities.
+                • Led the end-to-end development of two small-scale application projects using Agile methodologies, ensuring
+                efficient sprint planning, progress tracking, and task allocation via JIRA.<br>
+                • Conducted User Acceptance Testing (UAT) for Grandiose Supermarkets’ iOS/Android apps and website,
+                identifying and reporting critical bugs to enhance user experience and system reliability.<br>
+                • Performed functional testing of e-commerce systems using Magento, LogiNext, and Dynamics NAV, ensuring
+                seamless operations, optimized workflows, and system integrity.<br>
               </p>
 
             </li>
