add new project

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
             degree in Information Technology, I’m passionate about creating impactful solutions for users. My background includes
             working collaboratively in teams, problem-solving, researching, and utilizing my technical expertise to deliver seamless
             experiences. I’m keen to apply my skills to help resolve technical issues and provide exceptional support in an innovative,
-            values-driven environment, where customer satisfaction and continuous learning are at the forefront
+            values-driven environment, where customer satisfaction and continuous learning are at the forefront.
           </p>
         </section>
 
@@ -255,7 +255,8 @@
                 <h4 class="h4 service-item-title">Development</h4>
 
                 <p class="service-item-text">
-                  Using Python to Leetcode algorithms and data structures, Learning Docker and Linux, TDD using JavaScript.
+                  Using Python to Leetcode algorithms and data structures, Grokking System Design, 
+                  Learning Docker and Linux, TDD using JavaScript, Webapp development.
                 </p>
               </div>
 
@@ -820,7 +821,7 @@
                   <img src="./assets/images/project-4.png" alt="Smart park" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Smart Park App</h3>
+                <h3 class="project-title">Smart Park Android App</h3>
 
                 <p class="project-category">Applications</p>
 
@@ -899,8 +900,8 @@
               </a>
             </li>
 
-            <!-- <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="#">
+            <li class="project-item  active" data-filter-item data-category="web development">
+              <a href="https://github.com/kitkat3000-star/happy-c-coding">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -910,12 +911,12 @@
                   <img src="./assets/images/project-9.png" alt="arrival" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Arrival</h3>
+                <h3 class="project-title">Happy C Coding</h3>
 
                 <p class="project-category">Web development</p>
 
               </a>
-            </li> -->
+            </li>
 
           </ul>
 
