--- a/index.html
+++ b/index.html
@@ -255,8 +255,8 @@
                 <h4 class="h4 service-item-title">Development</h4>
 
                 <p class="service-item-text">
-                  Using Python to Leetcode algorithms and data structures, Grokking System Design, 
-                  Learning Docker and Linux, TDD using JavaScript, Webapp development.
+                  Using Python to Leetcode Algorithms and Data Structures, learning Grokking Coding Patterns 
+                  and getting hands-on with AWS Solutions Architect Course.
                 </p>
               </div>
 
@@ -532,7 +532,7 @@
               <span>2022 - 2024</span>
 
               <p class="timeline-text">
-                Master of Software Engineering (Distinction) <br>
+                Master of Software Engineering (Distinction) (WAM: 82) <br>
                 Relevant Courses: Algorithm and Data Structures, Security in Software Systems, Software Requirements analysis,
                 Software Design and Architecture, High Integrity Systems, Models of Computation,
                 Engineering Entrepreneurship, Modelling Complex Software Systems
@@ -547,7 +547,7 @@
               <span>2017 - 2021</span>
 
               <p class="timeline-text">
-                Bachelor of Information Technology: Management Information Systems GPA (4.0/4.0) <br>
+                Bachelor of Information Technology: Management Information Systems (GPA: 4.0/4.0) <br>
                 Relevant Courses: Problem Solving, System Analysis, Object Oriented Design and Programming, Data Management
                 and Security, Computer Systems, Human Computer Interaction, Networks and Communications
               </p>
@@ -577,41 +577,56 @@
               <span>Nov 2022 - Feb 2023</span>
 
               <p class="timeline-text">
-                • Developed and optimized React.js components for an interactive web platform. <br>
-                • Built RESTful APIs using Django, improving data retrieval efficiency. <br>
-                • Documented key workflows in an application manual for knowledge transfer. <br>
-                • Worked in an Agile team, collaborating with developers and a Scrum Master to deliver high-quality features. <br>
-                • Use of Microsoft Teams, Slack channels and Zoom for communication.
+                • Built core booking, profile, and chat pages using React.js, reducing page load time by approximately 25% and enhancing user engagement. <br>
+                • Developed 8+ Django REST API endpoints for booking, messaging, and notifications, contributing to reduced booking latency. <br>
+                • Resolved over 15 UI/UX bugs, including logout, filter, and inbox issues, improving early user retention. <br>
+                • Collaborated in a 5-person Agile team, resolving 10+ merge conflicts, conducting peer code reviews, and shipping tested features bi-weekly using Git. <br>
+                • Authored 3+ technical documentation pieces (booking flow, ERDs, chat integrations), facilitating the onboarding of new developers. <br>
+                • Used Microsoft Teams, Slack channels, and Zoom for communication.
               </p>
 
             </li>
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title"> IT intern- Project Management and Software Testing At Ghassan Aboud Group</h4>
+              <h4 class="h4 timeline-item-title"> IT Intern - Project Management and Software Testing At Ghassan Aboud Group</h4>
 
               <span>Sept 2021 - Dec 2021</span>
 
               <p class="timeline-text">
-                • Led the end-to-end development of two small-scale application projects using Agile methodologies, ensuring
-                efficient sprint planning, progress tracking, and task allocation via JIRA.<br>
-                • Conducted User Acceptance Testing (UAT) for Grandiose Supermarkets’ iOS/Android apps and website,
-                identifying and reporting critical bugs to enhance user experience and system reliability.<br>
-                • Performed functional testing of e-commerce systems using Magento, LogiNext, and Dynamics NAV, ensuring
-                seamless operations, optimized workflows, and system integrity.<br>
+                • Managed two internal application projects end-to-end using Jira and Agile sprints, ensuring on-time delivery. <br>
+                • Conducted User Acceptance Testing (UAT) on iOS/Android applications used by 10,000+ users, identifying 15+ critical issues.<br>
+                • Logged 50+ UI/UX bugs through structured reports, improving application usability and reducing support queries.<br>
+                • Performed systems testing across Magento, LogiNext, and Dynamics NAV to support smoother order tracking workflows.<br>
+                • Coordinated effectively within a 15-person Agile team of developers, project managers, and testers, maintaining alignment through weekly demos and feedback loops.<br>
               </p>
 
             </li>
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title"> IT intern At Al Shirawi Group </h4>
+              <h4 class="h4 timeline-item-title"> Web Development and Design Intern at Sparks Foundation </h4>
+
+              <span>Jul 2021 - Jul 2021</span>
+
+              <p class="timeline-text">
+                • Built a functional banking system simulating money transfers and transaction history using PHP, MySQL, HTML, CSS, and JavaScript. <br>
+                • Designed responsive front-end pages with form validation and user-friendly layouts, enhancing clarity and flow for key user tasks. <br>
+                • Demonstrated strong self-management and attention to detail by independently completing all assigned tasks within a 4-week timeline. <br>
+              </p>
+
+            </li>
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title"> IT Intern At Al Shirawi Group </h4>
 
               <span>June 2019 - August 2019</span>
 
               <p class="timeline-text">
-                • Wrote SQL queries in Oracle databases to create data models, establish BI reports, and update and manage current employee information. <br>
-                • Created value sets and lookup types for efficient querying.
+                • Wrote Oracle SQL queries to manage employee records, update HR data, and support backend data workflows. <br>
+                • Assisted in building data models and Business Intelligence (BI) reports, improving visibility into workforce metrics. <br>
+                • Created value sets and lookup types to streamline repeated queries and enhance reporting efficiency for HR teams. <br>
               </p>
 
             </li>
@@ -793,6 +808,24 @@
             </li>
 
             <li class="project-item  active" data-filter-item data-category="web design">
+              <a href="https://www.figma.com/proto/soS1G8ZTfgZDCfkwnLXRbC/Synesthesia-Diagnostic-Tool?type=design&node-id=543-1860&scaling=scale-down&page-id=490%3A77&starting-point-node-id=543%3A1860&show-proto-sidebar=1">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/project-10.png" alt="Synesthesia-Diagnostic-Tool" loading="lazy">
+                </figure>
+
+                <h3 class="project-title"> Synesthesia Diagnostic Tool </h3>
+
+                <p class="project-category">Web design</p>
+
+              </a>
+            </li>
+
+            <li class="project-item  active" data-filter-item data-category="web design">
               <a href="https://uxfol.io/p/himaja.kakade/038ba055">
 
                 <figure class="project-img">
@@ -824,24 +857,6 @@
                 <h3 class="project-title">Smart Park Android App</h3>
 
                 <p class="project-category">Applications</p>
-
-              </a>
-            </li>
-
-            <li class="project-item  active" data-filter-item data-category="web design">
-              <a href="https://drive.google.com/file/d/1vcA1ULQx74lEiBu8o2YftnhR9U_ZXP7R/view?usp=drive_link">
-
-                <figure class="project-img">
-                  <div class="project-item-icon-box">
-                    <ion-icon name="eye-outline"></ion-icon>
-                  </div>
-
-                  <img src="./assets/images/project-5.png" alt="design" loading="lazy">
-                </figure>
-
-                <h3 class="project-title">More Portfolio Designs</h3>
-
-                <p class="project-category">Web design</p>
 
               </a>
             </li>
@@ -908,12 +923,30 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-9.png" alt="arrival" loading="lazy">
+                  <img src="./assets/images/project-9.png" alt="happy-c-coding" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Happy C Coding</h3>
 
                 <p class="project-category">Web development</p>
+
+              </a>
+            </li>
+
+            <li class="project-item  active" data-filter-item data-category="web design">
+              <a href="https://drive.google.com/file/d/1vcA1ULQx74lEiBu8o2YftnhR9U_ZXP7R/view?usp=drive_link">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/project-5.png" alt="design" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">More Portfolio Designs</h3>
+
+                <p class="project-category">Web design</p>
 
               </a>
             </li>
